# metal.test

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  gdb.pyi  metal.serial.pyi
dev/: exit_test.c
example/: CMakeLists.txt
example/calltrace/: CMakeLists.txt  intro.cpp  repeat.cpp  repeat_c.c  start.cpp  start_c.c  timestamp.cpp  timestamp_c.c  wildcard.cpp
example/runner/: test_equal.cpp  test_equal_target.cpp
example/unit/: cancel_case.cpp  cases.cpp  intro.cpp  tutorial.cpp
gdb-plugins/: gdb.pyi  metal-calltrace.py  metal-exitcode.py  metal-newlib.py  metal-timeout.py  metal-unit.py
include/metal/: calltrace  calltrace.def  calltrace.h  calltrace.hpp  serial  serial.def  serial.h  serial.hpp  unit  unit.def  unit.h  unit.hpp  unit.ipp
include/metal/debug/: break_point.hpp  frame.hpp  interpreter.hpp  interpreter_impl.hpp  location.hpp  plugin.hpp  process.hpp
include/metal/gdb/: process.hpp
include/metal/gdb/mi2/: async_record_handler_t.hpp  frame_impl.hpp  input.hpp  interpreter.hpp  interpreter_error.hpp  output.hpp  session.hpp  types.hpp
include/metal/serial/: session.hpp
init-scripts/: openocd  openocd-arm-semihosting  qemu
libs/: asio.cpp
src/: metal-calltrace.cpp  metal-calltrace.py  metal-exitcode.cpp  metal-exitcode.py  metal-newlib.cpp  metal-newlib.py  metal-unit.cpp  metal-unit.py  runner.cpp  serial.cpp
src/calltrace/: calltrace_clone.hpp  hrf_sink.cpp  json_sink.cpp  sink.hpp
src/metal/debug/: interpreter_impl.cpp  process.cpp
src/metal/gdb/: process.cpp
src/metal/gdb/mi2/: frame_impl.cpp  interpreter.cpp  interpreter2.cpp  output.cpp  session.cpp  types.cpp
src/serial/: core_functions.cpp  core_functions.hpp  hrf_sink.cpp  implementation.cpp  implementation.hpp  json_sink.cpp  python_module.cpp  python_module.hpp  sink.hpp  test_functions.cpp  test_functions.hpp
src/unit/: hrf_sink.cpp  json_sink.cpp  sink.hpp
test/: CMakeLists.txt
test/calltrace/: CMakeLists.txt  dummy.cpp  hrf-cmp-ts.txt  hrf-cmp.txt  overload.cpp  plugin-test.cpp  test-c.c  test-cpp.cpp  test-plugin.py
test/runner/: CMakeLists.txt  async_record_handler.cpp  interpreter_mi2.cpp  parser.cpp  plugin.cpp  target.cpp  test_runner.cpp
test/serial/: CMakeLists.txt  c.out  compile_test.c  compile_test.cpp  cpp.out  run_c.py  run_cpp.py
test/unit/: CMakeLists.txt
test/unit/hrf/: CMakeLists.txt  cancel_case.cpp  cancel_case.out  cancel_func.cpp  cancel_func.out  cancel_main.cpp  cancel_main.out  close.cpp  close.out  cmd.gdb  compare.cpp  compare.out  empty_test.cpp  empty_test.out  equal.cpp  equal.out  except.cpp  except.out  exec.cpp  exec.out  fail_test.cpp  fail_test.out  gdb-run.py  ge.cpp  ge.out  le.cpp  le.out  messaging.cpp  messaging.out  not_equal.cpp  not_equal.out  predicate.cpp  predicate.out  run_case.cpp  run_case.out  test.py  trace.out  warn_test.cpp  warn_test.out
test/unit/json/: CMakeLists.txt  c_test.c  cpp_test.cpp  run_c.py
test/unit/raw/: CMakeLists.txt  test.cpp  test_static.c  test_static.cpp  test_static.h
